styles/layout.less
/**
 * @file plugins/themes/default-manuscript/styles/index.less
 *
 * Copyright (c) 2014-2016 Simon Fraser University Library
 * Copyright (c) 2003-2016 John Willinsky
 * Distributed under the GNU GPL v2. For full terms see the file docs/COPYING.
 *
 * @brief Layout styles which implement the boxed layout
 *
 */

// A grey background on large screens
body {
	background: @bg-shade;
}

// A white background for the boxed content area
.pkp_structure_page {
	margin: 0 auto;
	max-width: @screen-lg-desktop-container;
	background: @bg;
	box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);

	@media(min-width: @screen-lg-desktop) {
		margin-top: @triple;
		margin-bottom: @triple;
	}
}

.pkp_structure_footer_wrapper {
	background: @bg-light-shade;
	border-bottom: @double solid @bg-base;
}

// Removes the left and right borders around the main content panel
.pkp_structure_main:before,
.pkp_structure_main:after {
	display: none;
}

.pkp_structure_content {
	padding-top: 0;
	border-bottom: @bg-border;
}

.pkp_structure_sidebar {

	@media(min-width: @screen-desktop) {

		&:before {
			content: '';
			position: absolute;
			top: 0;
			right: 0;
			bottom: 0;
			width: 300px;
			border-left: @bg-border;
		}

		// Child elements need position to appear above the background element
		> * {
			position: relative;
		}
	}
}

// Adjust the layout to display nicely with no sidebar
.pkp_structure_main:first-child:last-child {

	@media(min-width: @screen-desktop) {
		float: none;
		margin-left: auto;
		margin-right: auto;
		margin-top: @quadruple;
	}
}

